--- a/BibliotekaMobilnaPWR/AndroidManifest.xml
+++ b/BibliotekaMobilnaPWR/AndroidManifest.xml
@@ -7,7 +7,8 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -29,6 +30,22 @@
         <activity
             android:name="com.example.bibliotekamobilnapwr.ParseURLActivity"
             android:label="@string/app_name" />
+        <activity
+            android:name="com.example.bibliotekamobilnapwr.Rezerwacje"
+            android:label="@string/title_activity_rezerwacje" >
+        </activity>
+        <activity
+            android:name="com.example.bibliotekamobilnapwr.Konto"
+            android:label="@string/title_activity_konto" >
+        </activity>
+        <activity
+            android:name="com.example.bibliotekamobilnapwr.KsiazkiActivity"
+            android:label="@string/title_activity_ksiazki" >
+        </activity>
+        <activity
+            android:name="com.example.bibliotekamobilnapwr.EdytujKonto"
+            android:label="@string/title_activity_edytuj_konto" >
+        </activity>
     </application>
 
 </manifest>
