Dodanie GUI odnośnie Konta uzytkownika, rezerwacji ksiazek, zmiany hasla

--- a/BibliotekaMobilnaPWR/AndroidManifest.xml
+++ b/BibliotekaMobilnaPWR/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.bibliotekamobilnapwr.Main"
+            android:name=".Main"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,26 +25,38 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.bibliotekamobilnapwr.LoginActivity"
+            android:name=".LoginActivity"
             android:label="@string/app_name" />
         <activity
-            android:name="com.example.bibliotekamobilnapwr.ParseURLActivity"
+            android:name=".ParseURLActivity"
             android:label="@string/app_name" />
         <activity
-            android:name="com.example.bibliotekamobilnapwr.Rezerwacje"
+            android:name=".Rezerwacje"
             android:label="@string/title_activity_rezerwacje" >
         </activity>
         <activity
-            android:name="com.example.bibliotekamobilnapwr.Konto"
+            android:name=".Konto"
             android:label="@string/title_activity_konto" >
         </activity>
         <activity
-            android:name="com.example.bibliotekamobilnapwr.KsiazkiActivity"
+            android:name=".KsiazkiActivity"
             android:label="@string/title_activity_ksiazki" >
         </activity>
         <activity
-            android:name="com.example.bibliotekamobilnapwr.EdytujKonto"
+            android:name=".EdytujKonto"
             android:label="@string/title_activity_edytuj_konto" >
+        </activity>
+        <activity
+            android:name=".AccountActivity"
+            android:label="@string/title_activity_account" >
+        </activity>
+        <activity
+            android:name=".ChangePassActivity"
+            android:label="@string/title_activity_change_pass" >
+        </activity>
+        <activity
+            android:name=".ListReserveActivity"
+            android:label="@string/title_activity_list_reserve" >
         </activity>
     </application>
 
