--- a/BibliotekaMobilnaPWR/AndroidManifest.xml
+++ b/BibliotekaMobilnaPWR/AndroidManifest.xml
@@ -36,6 +36,10 @@
             android:label="@string/title_activity_rezerwacje" >
         </activity>
         <activity
+            android:name=".KomunikatActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
             android:name=".Konto"
             android:label="@string/title_activity_konto" >
         </activity>
