Zrobione polecanie ksiazek za pomoca sms-a i e-maila

--- a/BibliotekaMobilnaPWR/AndroidManifest.xml
+++ b/BibliotekaMobilnaPWR/AndroidManifest.xml
@@ -83,9 +83,13 @@
             android:name=".ConfirmationActivity"
             android:label="@string/title_activity_rezerwacje" >
         </activity>
-         <activity
+        <activity
             android:name=".BookingStatementActivity"
             android:label="@string/title_activity_rezerwacje" >
+        </activity>
+        <activity
+            android:name=".RecommendActivity"
+            android:label="@string/title_activity_recommend" >
         </activity>
     </application>
 
