--- a/BibliotekaMobilnaPWR/AndroidManifest.xml
+++ b/BibliotekaMobilnaPWR/AndroidManifest.xml
@@ -10,12 +10,15 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
+	<uses-permission android:name="android.permission.VIBRATE"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        <receiver android:name=".AlertReceiver"/>
         <activity
             android:name=".Main"
             android:label="@string/app_name" >
@@ -69,6 +72,14 @@
         </activity>
         <activity
             android:name=".HistoryActivity"
+            android:label="@string/title_activity_history" >
+        </activity>
+        <activity
+            android:name=".WypozyczeniaActivity"
+            android:label="@string/title_activity_history" >
+        </activity>
+        <activity
+            android:name=".DodajKomunikatActivity"
             android:label="@string/title_activity_history" >
         </activity>
         <activity
